Add computations intro

--- a/BigData/computations/computations.ipynb
+++ b/BigData/computations/computations.ipynb
@@ -127,6 +127,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "neither-armstrong",
    "metadata": {},
@@ -141,7 +142,7 @@
     "\n",
     "### Min / Max / Mean / Stddev\n",
     "\n",
-    "Functions like these are pretty simple to calculate regardless of dataset size, as they don't require the entire dataset to be in memory. You can just loop over the dimension to be reduced calculating value so far up to that step\n",
+    "Functions like these are pretty simple to calculate regardless of dataset size, as they don't require the entire dataset to be in memory. You can just loop over the dimension to be reduced by calculating the value so far up to that step\n",
     "\n",
     "In pseudocode (in Python you're better off using `data.min(axis=0)`, as that's optimised compared to a loop)\n",
     "\n",
@@ -299,13 +300,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "vital-restoration",
    "metadata": {},
    "source": [
     "### Climatologies\n",
     "\n",
-    "Climatologies combine multiple years worth of data into a single sample year, for instance a daily mean climatology would output a year of data, with each day in the output the mean of all the days with the same month and day in the input.\n",
+    "Climatologies combine multiple years worth of data into a single sample year. For instance, a daily mean climatology would output a year of data, with each output day being the mean of all days with the same date from the input. In other words, the output for, e.g., March 3rd would be the average across all March 3rds in the multi-year dataset.\n",
     "\n",
     "Leap years require some consideration in a daily climatology, as those days will have 1/4 the samples of other days. Also consider how you are counting - with a day of year counting Feb 29 in a leap year will be matched up with 1 Mar in a non-leap year. "
    ]
